2006-09-21  Nathaniel Smith  <njs@pobox.com>

	* lru_writeback_cache.hh (clean_insert): Correct the cache
	overflow logic so as to _actually_ never remove the last element.
	Add an invariant to verify this.
	(insert_dirty): Add an invariant here too.

2006-09-20  Nathaniel Smith  <njs@pobox.com>

	* roster.hh: *sigh* Previous changes were just dumb.  Remove
	them again.

2006-09-20  Nathaniel Smith  <njs@pobox.com>

	* roster.hh: Oops.

2006-09-20  Nathaniel Smith  <njs@pobox.com>

	* roster.hh: Expose some useful dump() overloads that are already
	defined in roster.cc.

2006-09-19  Alex Queiroz <alex@ventonegro.org>

	* po/pt_BR.po: 1 fuzzy fixed.

2006-09-18  Matt Johnston  <matt@ucc.asn.au>

	* cmd.hh (ALIAS macro): somehow g++ 4.x is happy with std:string.
	g++ 3.3.5 isn't.

2006-09-18  Zack Weinberg  <zackw@panix.com>

	Fix a latent bug in the roster random actions test, and make it
	somewhat more rigorous.
	* roster.cc (random_actions): Always compare with the
	just-previous roster; the random walk can return to an earlier
	position.  Restructure with nested loops; run tests_on_two_rosters
	more frequently.  Set up the scratch roster with a root here.
	(perform_random_action): Invariant on entry that r has
	a root already.  Do not delete the root node.  Add commented L()
	for content changes.

2006-09-18  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (DISTCLEANFILES): Add unit_tests.log.

2006-09-18  Zack Weinberg  <zackw@panix.com>

	* unit_tests.cc: Rewrite for declarative registration of test cases,
	better command line handling, and more useful stderr chatter in
	normal operation.  All debug output now goes to a logfile (default
	"unit_tests.log") and can be sent back to stderr with --debug.
	* unit_tests.hh: Remove declarations of removed functions.
	Don't include unit_test_suite.hpp.
	(UNIT_TEST, struct unit_test_case): New.
	(BOOST_CHECK_NOT_THROW): Reindent and wrap in do { } while (0).
